[patch."https://github.com/Arceos-crates/axconfig.git".axconfig]
path = "modules/axconfig"

[patch."https://github.com/Arceos-crates/axhal.git".axhal]
path = "modules/axhal"

[patch."https://github.com/Arceos-crates/axdriver.git".axdriver]
path = "modules/axdriver"

[patch."https://github.com/Arceos-crates/arceos_posix_api.git".arceos_posix_api]
path = "api/arceos_posix_api"

[workspace]
resolver = "2"

members = [
    "modules/axconfig",
    "modules/axhal", 
    "api/arceos_posix_api",
    "ulib/axlibc",
    "apps/helloworld",
    "apps/oscomp",
]

[profile.release]
lto = true

[patch.crates-io]
crate_interface = { git = "https://github.com/Arceos-crates/crate_interface.git" }

[patch."https://github.com/rcore-os/smoltcp.git"]
smoltcp = { git = "https://github.com/c0per/smoltcp", branch = "starryos" }