
[workspace]
resolver = "2"

members = [
    "apps/helloworld",
]

[profile.release]
lto = true

[patch.crates-io]
crate_interface = { git = "https://github.com/Arceos-crates/crate_interface.git" }

[patch."https://github.com/rcore-os/smoltcp.git"]
smoltcp = { git = "https://github.com/c0per/smoltcp", branch = "starryos" }