[package]
name = "arceos_api"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Public APIs and types for ArceOS modules"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/arceos_api"
documentation = "https://rcore-os.github.io/arceos/arceos_api/index.html"

[features]
default = []

irq = ["axfeat/irq"]
alloc = ["dep:axalloc", "axfeat/alloc"]
multitask = ["axtask/multitask", "axfeat/multitask"]
fs = ["dep:axfs", "axfeat/fs"]
net = ["dep:axnet", "axfeat/net"]
display = ["dep:axdisplay", "axfeat/display"]

myfs = ["axfeat/myfs"]

# Use dummy functions if the feature is not enabled
dummy-if-not-enabled = []

monolithic = ["axruntime/monolithic"]

[dependencies]
axfeat = { git = "https://github.com/Arceos-crates/axfeat.git" }
axruntime = { git = "https://github.com/Arceos-crates/axruntime.git" }
axconfig = { git = "https://github.com/Arceos-crates/axconfig.git" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
axio = { git = "https://github.com/Arceos-crates/axio" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
axalloc = { git = "https://github.com/Arceos-crates/axalloc.git", optional = true }
axtask = { git = "https://github.com/Arceos-crates/axtask.git", optional = true }
axfs = { git = "https://github.com/Arceos-crates/axfs.git", optional = true }
axnet = { git = "https://github.com/Arceos-crates/axnet.git", optional = true }
axdisplay = { git = "https://github.com/Arceos-crates/axdisplay.git", optional = true }
