[package]
name = "driver_virtio"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `driver_common` series crates"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_virtio"
documentation = "https://rcore-os.github.io/arceos/driver_virtio/index.html"

[features]
block = ["driver_block"]
net = ["driver_net"]
gpu = ["driver_display"]

[dependencies]
driver_common = { git = "https://github.com/Arceos-crates/driver_common.git" }
driver_block = { git = "https://github.com/Arceos-crates/driver_block.git", optional = true }
driver_net = { git = "https://github.com/Arceos-crates/driver_net.git", optional = true }
driver_display = { path = "../driver_display", optional = true}
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers.git", rev = "4b60f5d" }
