[package]
name = "page_table"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Generic page table structures for various hardware architectures"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/page_table"
documentation = "https://rcore-os.github.io/arceos/page_table/index.html"

[dependencies]
log = "0.4"
memory_addr = { git = "https://github.com/Arceos-crates/memory_addr.git"}
page_table_entry = { git = "https://github.com/Arceos-crates/page_table_entry.git"  }
