[package]
name = "axfs"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS filesystem module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axfs"
documentation = "https://rcore-os.github.io/arceos/axfs/index.html"

[features]
devfs = ["dep:axfs_devfs"]
ramfs = ["dep:axfs_ramfs"]
procfs = ["dep:axfs_ramfs"]
sysfs = ["dep:axfs_ramfs"]
fatfs = ["dep:fatfs"]
myfs = ["dep:crate_interface"]
use-ramdisk = []
monolithic = []
default = ["devfs", "ramfs", "fatfs", "procfs", "sysfs"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazy_init = { git = "https://github.com/Arceos-crates/lazy_init.git"  }
capability = { git = "https://github.com/Arceos-crates/capability.git" }
driver_block = { git = "https://github.com/Arceos-crates/driver_block.git", optional = true }
axio = { git = "https://github.com/Arceos-crates/axio" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axfs_vfs = { git = "https://github.com/Arceos-crates/axfs_vfs.git" }
axfs_devfs = { git = "https://github.com/Arceos-crates/axfs_devfs.git", optional = true }
axfs_ramfs = { git = "https://github.com/Arceos-crates/axfs_ramfs.git", optional = true }
axdriver = { path = "../axdriver", features = ["block"] }
axsync = { path = "../axsync" }
crate_interface = { git = "https://github.com/Arceos-crates/crate_interface.git", optional = true }
bitflags = "2.0"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "a3a834e"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]

[dev-dependencies]
axdriver = { path = "../axdriver", features = ["block", "ramdisk"] }
driver_block = { git = "https://github.com/Arceos-crates/driver_block.git", features = ["ramdisk"] }
axsync = { path = "../axsync", features = ["multitask"] }
axtask = { path = "../axtask", features = ["test"] }
