[package]
name = "axmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

monolithic = ["axfs/monolithic"]

default = []

[dependencies]
log = "0.4"
axhal = { path = "../axhal", features = ["paging"] }
axalloc = { git = "https://github.com/Arceos-crates/axalloc.git" }
axconfig = { git = "https://github.com/Arceos-crates/axconfig.git"}
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axfs = { path = "../axfs" }
axio = { git = "https://github.com/Arceos-crates/axio" }
spinlock = { git = "https://github.com/Arceos-crates/spinlock.git" }
xmas-elf = "0.9.0"
riscv = "0.10"
page_table_entry = { git = "https://github.com/Arceos-crates/page_table_entry.git" }