[package]
name = "axprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

fs = ["axfs"]

signal = ["axhal/signal", "axsignal/signal", "axtask/signal"]

monolithic = ["fs", "axfs/monolithic"]

# Futex support
futex = []

default = []

[dependencies]
cfg-if = "1.0"
spinlock = { git = "https://github.com/Arceos-crates/spinlock.git" }
axtask = { git = "https://github.com/Arceos-crates/axtask.git" }
axsync = { git = "https://github.com/Arceos-crates/axsync.git" }
axmem = { path = "../axmem" }
axalloc = { git = "https://github.com/Arceos-crates/axalloc.git" }
axio = { git = "https://github.com/Arceos-crates/axio" }
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axconfig = { git = "https://github.com/Arceos-crates/axconfig.git"}
axfs = { git = "https://github.com/Arceos-crates/axfs.git", optional = true }
axsignal = { git = "https://github.com/Arceos-crates/axsignal.git", optional = true }
riscv = "0.10"
bitflags = "2.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
xmas-elf = "0.9.0"
crate_interface = { git = "https://github.com/Arceos-crates/crate_interface.git" }