[package]
name = "arceos-shell"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-ramfs = ["axstd/myfs", "dep:axfs_vfs", "dep:axfs_ramfs", "dep:crate_interface"]
default = []

[dependencies]
axfs_vfs = { git = "https://github.com/Arceos-crates/axfs_vfs.git", optional = true }
axfs_ramfs = { path = "../../../crates/axfs_ramfs", optional = true }
crate_interface = { git = "https://github.com/Arceos-crates/crate_interface.git", optional = true }
axstd = { path = "../../../ulib/axstd", features = ["alloc", "fs"], optional = true }
