[package]
name = "syscall_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

signal = ["axprocess/signal"]

[dependencies]
axtask = { git = "https://github.com/Arceos-crates/axtask.git" }
axsync = { git = "https://github.com/Arceos-crates/axsync.git" }
axfs = { path = "../../../modules/axfs" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
axprocess = { path = "../../../modules/axprocess" }
syscall_utils = { path = "../syscall_utils" }
axio = { git = "https://github.com/Arceos-crates/axio" }
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
bitflags = "2.0"
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
