[package]
name = "syscall_mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

fs = ["dep:syscall_fs"]

[dependencies]
axprocess = { git = "https://github.com/Arceos-crates/axprocess.git" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
syscall_utils = { git = "https://github.com/Arceos-crates/syscall_utils.git" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
bitflags = "2.0"
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
axmem = { git = "https://github.com/Arceos-crates/axmem.git" }
syscall_fs = { git = "https://github.com/Arceos-crates/syscall_fs.git", optional = true }
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }