[package]
name = "syscall_net"
version = "0.1.0"
edition = "2021"

authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["ip", "arceos_api/net", "axfeat/net"]

# Networking
ip = ["axnet/ip"]
dns = []

[dependencies]
axnet = { git = "https://github.com/Arceos-crates/axnet.git" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
axprocess = { git = "https://github.com/Arceos-crates/axprocess.git" }
axfs = { git = "https://github.com/Arceos-crates/axfs.git" }
axio = { git = "https://github.com/Arceos-crates/axio" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
axsync = { git = "https://github.com/Arceos-crates/axsync.git" }
num_enum = { version = "0.5.11", default-features = false }
syscall_utils = { git = "https://github.com/Arceos-crates/syscall_utils.git" }
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
axfeat = { git = "https://github.com/Arceos-crates/axfeat.git" }
arceos_api = { git = "https://github.com/Arceos-crates/arceos_api.git" }