[package]
name = "syscall_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# Signal
signal = ["axfeat/signal", "dep:axsignal"]

# Futex support
futex = ["axfeat/futex"]

# Schedule
schedule = []

default = []

[dependencies]
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
axfeat = { git = "https://github.com/Arceos-crates/axfeat.git" }
arceos_api = { path = "../../../api/arceos_api" }
axsignal = { git = "https://github.com/Arceos-crates/axsignal.git", optional = true }
axtask = { git = "https://github.com/Arceos-crates/axtask.git"}
axprocess = { git = "https://github.com/Arceos-crates/axprocess.git" }
axconfig = { git = "https://github.com/Arceos-crates/axconfig.git"}
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
syscall_utils = { git = "https://github.com/Arceos-crates/syscall_utils.git" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }