[package]
name = "syscall_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axhal = { git = "https://github.com/Arceos-crates/axhal.git" }
axlog = { git = "https://github.com/Arceos-crates/axlog.git" }
num_enum = { version = "0.5.11", default-features = false }
bitflags = "2.0"
axfs = { git = "https://github.com/Arceos-crates/axfs.git" }
axconfig = { git = "https://github.com/Arceos-crates/axconfig.git" }
axerrno = { git = "https://github.com/Arceos-crates/axerrno.git" }
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }